--- a/platformio.ini
+++ b/platformio.ini
@@ -8,24 +8,25 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-; [env:megaatmega2560]
-; platform = atmelavr
-; board = megaatmega2560
+[env:megaatmega2560]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+
+; [env:uno_wifi_rev2]
+; platform = atmelmegaavr
+; board = uno_wifi_rev2
 ; framework = arduino
 
-[env:nanoatmega328]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
+; [env:nanoatmega328]
+; platform = atmelavr
+; board = nanoatmega328
+; framework = arduino
 
 
 lib_deps =
     LiquidCrystal_i2c
     Keypad
-    AccelStepper
     SPI
-    MFRC522
-    Stepper
-    adafruit/Adafruit Fingerprint Sensor Library@^2.1.3
     SoftwareSerial
-    Ethernet
+    Servo
